column overflow fix

--- a/src/features/layers_panel/components/MapLayersPanel/MapLayersPanel.module.css
+++ b/src/features/layers_panel/components/MapLayersPanel/MapLayersPanel.module.css
@@ -48,6 +48,7 @@
   }
 
   .panelIcon {
+    z-index: 1;
     &.show {
       visibility: visible;
       display: flex;
